--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,26 +1,27 @@
+---
 on:
-  push:
-    branches:
-    - master
+    push:
+        branches:
+        -   master
 permissions:
-  contents: write
+    contents: write
 jobs:
-  build_docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install neurodocker
-        run: python -m pip install --editable .[all]
-      - name: build docs
-        run: |
-          make -C docs cli
-          make -C docs list
-          sphinx-build docs docs-build
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: docs-build # The folder the action should deploy.
+    build_docs:
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v4
+        -   name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: '3.10'
+        -   name: Install neurodocker
+            run: python -m pip install --editable .[all]
+        -   name: build docs
+            run: |
+                make -C docs cli
+                make -C docs list
+                sphinx-build docs docs-build
+        -   name: Deploy
+            uses: JamesIves/github-pages-deploy-action@v4
+            with:
+                folder: docs-build # The folder the action should deploy.
