--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,27 +1,28 @@
+---
 name: Publish to pypi on Github release
 
 on:
-  release:
-    types: [published]
+    release:
+        types: [published]
 
 jobs:
-  pypi-release:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+    pypi-release:
+        runs-on: ubuntu-latest
+        steps:
+        -   uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+        -   name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: '3.10'
 
-      - name: Install build & twine
-        run: python -m pip install build twine
+        -   name: Install build & twine
+            run: python -m pip install build twine
 
-      - name: Publish to pypi
-        run: |
-          python -m build
-          twine upload dist/*
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
+        -   name: Publish to pypi
+            run: |
+                python -m build
+                twine upload dist/*
+            env:
+                TWINE_USERNAME: __token__
+                TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
