--- a/.github/workflows/test_doc.yml
+++ b/.github/workflows/test_doc.yml
@@ -1,3 +1,4 @@
+---
 name: test examples
 
 concurrency:
@@ -6,12 +7,12 @@ concurrency:
 
 on:
     push:
-        branches: [ "master" ]
+        branches: [master]
     pull_request:
-        branches: [ "master" ]
+        branches: [master]
 
     schedule:
-        - cron: 0 0 1 * *
+    -   cron: 0 0 1 * *
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
@@ -21,20 +22,20 @@ jobs:
         runs-on: ubuntu-22.04
 
         steps:
-        - uses: actions/checkout@v4
+        -   uses: actions/checkout@v4
 
-        - name: Set up Python
-          uses: actions/setup-python@v5
-          with:
-            python-version: '3.11'
+        -   name: Set up Python
+            uses: actions/setup-python@v5
+            with:
+                python-version: '3.11'
 
-        - name: Install neurodocker
-          run: python -m pip install --editable .
+        -   name: Install neurodocker
+            run: python -m pip install --editable .
 
-        - name: test common uses
-          run: bash < docs/common_uses/conda_multiple_env.txt
+        -   name: test common uses
+            run: bash < docs/common_uses/conda_multiple_env.txt
 
-        - name: "test nipype_tuto: failure expected"
-          run: bash < docs/examples/nipype_tuto.txt
+        -   name: 'test nipype_tuto: failure expected'
+            run: bash < docs/examples/nipype_tuto.txt
           # do not fail the workflow if the example fails
-          continue-on-error: true
+            continue-on-error: true
