--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,39 +1,60 @@
+---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.5.0
     hooks:
     -   id: trailing-whitespace
-    -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: check-ast
+    -   id: check-case-conflict
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: check-toml
+    -   id: end-of-file-fixer
+    -   id: mixed-line-ending
 
--   repo: https://github.com/psf/black
-    rev: "23.1.0"
+-   repo: https://github.com/codespell-project/codespell
+    rev: v2.2.6
     hooks:
-    -   id: black
+    -   id: codespell
+        additional_dependencies:
+        -   tomli
 
 -   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.2
     hooks:
     -   id: isort
         args: [--profile, black]
 
--   repo: https://github.com/pycqa/flake8
-    rev: "6.0.0"
+-   repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 24.3.0
     hooks:
-        - id: flake8
+    -   id: black
+
+-   repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+    rev: 0.2.3
+    hooks:
+    -   id: yamlfmt
+        args: [--mapping, '4', --sequence, '4', --offset, '0']
+
+-   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.13.0
+    hooks:
+    -   id: pretty-format-toml
+        args: [--autofix, --indent, '4']
+
+-   repo: https://github.com/pycqa/flake8
+    rev: 7.0.0
+    hooks:
+    -   id: flake8
 
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.991"
+    rev: v1.9.0
     hooks:
-      - id: mypy
+    -   id: mypy
         additional_dependencies: [types-all]
         files: neurodocker
-        args: ["--config-file", "setup.cfg"]
-
-- repo: https://github.com/codespell-project/codespell
-  rev: v2.2.5
-  hooks:
-  - id: codespell
+        args: [--config-file, pyproject.toml, --install-types]
