--- a/neurodocker/templates/cat12.yaml
+++ b/neurodocker/templates/cat12.yaml
@@ -1,3 +1,4 @@
+---
 # Instructions to install CAT12 toolbox with SPM.
 #
 # Documentation: http://www.neuro.uni-jena.de/cat12-html/cat_versions.html
@@ -6,41 +7,41 @@
 name: cat12
 url: https://neuro-jena.github.io/cat/
 binaries:
-  arguments:
-    required:
-    - version
-    optional:
-      install_path: /opt/CAT12-{{ self.version }}
-  urls:
-    r1933_R2017b: http://www.neuro.uni-jena.de/cat12/CAT12.8_r1933_R2017b_MCR_Linux.zip
-    r2166_R2017b: http://www.neuro.uni-jena.de/cat12/CAT12.8.2_r2166_R2017b_MCR_Linux.zip
-  dependencies:
-    apt:
-    - ca-certificates
-    - curl
-    - unzip
-    yum:
-    - curl
-    - unzip
-  env:
-    FORCE_SPMMCR: "1"
-    SPM_HTML_BROWSER: "0"
-    MCR_INHIBIT_CTF_LOCK: "1"
-    SPMROOT: "{{ self.install_path }}"
-    PATH: "{{ self.install_path }}:$PATH"
+    arguments:
+        required:
+        -   version
+        optional:
+            install_path: /opt/CAT12-{{ self.version }}
+    urls:
+        r1933_R2017b: http://www.neuro.uni-jena.de/cat12/CAT12.8_r1933_R2017b_MCR_Linux.zip
+        r2166_R2017b: http://www.neuro.uni-jena.de/cat12/CAT12.8.2_r2166_R2017b_MCR_Linux.zip
+    dependencies:
+        apt:
+        -   ca-certificates
+        -   curl
+        -   unzip
+        yum:
+        -   curl
+        -   unzip
+    env:
+        FORCE_SPMMCR: '1'
+        SPM_HTML_BROWSER: '0'
+        MCR_INHIBIT_CTF_LOCK: '1'
+        SPMROOT: '{{ self.install_path }}'
+        PATH: '{{ self.install_path }}:$PATH'
 
-  instructions: |
-    {{ self.install_dependencies() }}
-    # Install cat12
-    echo "Downloading standalone CAT12 ..."
-    curl -fL -o /tmp/cat12.zip {{ self.urls[self.version] }}
-    unzip -q /tmp/cat12.zip -d /tmp
-    rm -rf /tmp/cat12.zip
-    mkdir -p {{ self.install_path }}
-    mv /tmp/*{{ self.version }}*/* {{ self.install_path }}/
-    chmod -R 777 {{ self.install_path }}
-    # Test
-    {{ self.install_path }}/spm12 function exit
-    # Fix m file
-    rm {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
-    cp {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.txt {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
+    instructions: |
+        {{ self.install_dependencies() }}
+        # Install cat12
+        echo "Downloading standalone CAT12 ..."
+        curl -fL -o /tmp/cat12.zip {{ self.urls[self.version] }}
+        unzip -q /tmp/cat12.zip -d /tmp
+        rm -rf /tmp/cat12.zip
+        mkdir -p {{ self.install_path }}
+        mv /tmp/*{{ self.version }}*/* {{ self.install_path }}/
+        chmod -R 777 {{ self.install_path }}
+        # Test
+        {{ self.install_path }}/spm12 function exit
+        # Fix m file
+        rm {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
+        cp {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.txt {{ self.install_path }}/spm12_mcr/home/gaser/gaser/spm/spm12/toolbox/cat12/cat_long_main.m
