--- a/neurodocker/templates/minc.yaml
+++ b/neurodocker/templates/minc.yaml
@@ -1,91 +1,92 @@
+---
 # Instructions to install MINC toolkit v2.
 #
 # Instructions: http://bic-mni.github.io/#on-debianubuntu
 # The Debian packages are unpacked for yum based distributions as well
 
 name: minc
-url:  https://github.com/BIC-MNI/minc-toolkit-v2
+url: https://github.com/BIC-MNI/minc-toolkit-v2
 binaries:
-  arguments:
-    required:
-    - version
-    optional:
-      install_path: /opt/minc-{{ self.version }}
-  urls:
-      "1.9.15": https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.15-20170529-Ubuntu_16.04-x86_64.deb
-      "1.9.16": https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.16-20180117-Ubuntu_18.04-x86_64.deb
-      "1.9.17": https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.17-20190313-Ubuntu_18.04-x86_64.deb
-      "1.9.18": https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.18-20200813-Ubuntu_18.04-x86_64.deb
-  dependencies:
-    apt:
-    - ca-certificates
-    - curl
-    - libgl1-mesa-dev
-    - libice6
-    - libsm6
-    - libx11-6
-    - libxext6
-    - libxi6
-    - libxmu6
-    - libgomp1
-    - libjpeg62
-    - unzip
-    - octave
-    - libglu1-mesa
-    - libgl1-mesa-glx
-    - perl
-    - imagemagick
-    - bc
-    - ed
-    - libc6
-    - libstdc++6
-    - gdebi-core
-    - binutils
-    - git
-    yum:
-    - curl
-    - libICE
-    - libSM
-    - libX11
-    - libXext
-    - libXi
-    - libXmu
-    - libgomp
-    - libjpeg-turbo
-    - mesa-libGL-devel
-    - unzip
-    - octave
-    - mesa-dri-drivers
-    - epel-release
-    - glibc
-    - libstdc++
-    - ImageMagick
-    - perl
-    - binutils
-    - git
-  env:
-    MINC_TOOLKIT: "{{ self.install_path }}"
-    MINC_TOOLKIT_VERSION: "{{ self.install_path }}"
-    PATH: "{{ self.install_path }}/bin:{{ self.install_path }}/volgenmodel-nipype/extra-scripts:{{ self.install_path }}/pipeline:$PATH"
-    PERL5LIB: "{{ self.install_path }}/perl:{{ self.install_path }}/pipeline:${PERL5LIB}"
-    LD_LIBRARY_PATH: "{{ self.install_path }}/lib:{{ self.install_path }}/lib/InsightToolkit:${LD_LIBRARY_PATH}"
-    MNI_DATAPATH: "{{ self.install_path }}/share"
-    MINC_FORCE_V2: "1"
-    MINC_COMPRESS: "4"
-    VOLUME_CACHE_THRESHOLD: "-1"
-    MANPATH: "{{ self.install_path }}/man:${MANPATH}"
-  instructions: |
-    {{ self.install_dependencies() }}
-    echo "Downloading MINC, BEASTLIB, and MODELS..."
-    cd /
-    # ar allows to extract the debian package so we can also install this in centos based OSs.
-    curl {{ self.urls[self.version] }} -o minc.deb && ar p minc.deb data.tar.gz | tar zx && rm minc.deb
-    ln -s /opt/minc/{{ self.version }} {{ self.install_path }}
-    git clone https://github.com/CAIsr/volgenmodel-nipype.git {{ self.install_path }}/volgenmodel-nipype/
-    curl -fL http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
-    | tar -xz -C {{ self.install_path }}/share
-    curl -fL -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip
-    unzip /tmp/mni_90a.zip -d {{ self.install_path }}/share/icbm152_model_09a
-    curl -fL -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip
-    unzip /tmp/mni_90c.zip -d {{ self.install_path }}/share/icbm152_model_09c
-    rm -rf /tmp/mni*
+    arguments:
+        required:
+        -   version
+        optional:
+            install_path: /opt/minc-{{ self.version }}
+    urls:
+        1.9.15: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.15-20170529-Ubuntu_16.04-x86_64.deb
+        1.9.16: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.16-20180117-Ubuntu_18.04-x86_64.deb
+        1.9.17: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.17-20190313-Ubuntu_18.04-x86_64.deb
+        1.9.18: https://packages.bic.mni.mcgill.ca/minc-toolkit/Debian/minc-toolkit-1.9.18-20200813-Ubuntu_18.04-x86_64.deb
+    dependencies:
+        apt:
+        -   ca-certificates
+        -   curl
+        -   libgl1-mesa-dev
+        -   libice6
+        -   libsm6
+        -   libx11-6
+        -   libxext6
+        -   libxi6
+        -   libxmu6
+        -   libgomp1
+        -   libjpeg62
+        -   unzip
+        -   octave
+        -   libglu1-mesa
+        -   libgl1-mesa-glx
+        -   perl
+        -   imagemagick
+        -   bc
+        -   ed
+        -   libc6
+        -   libstdc++6
+        -   gdebi-core
+        -   binutils
+        -   git
+        yum:
+        -   curl
+        -   libICE
+        -   libSM
+        -   libX11
+        -   libXext
+        -   libXi
+        -   libXmu
+        -   libgomp
+        -   libjpeg-turbo
+        -   mesa-libGL-devel
+        -   unzip
+        -   octave
+        -   mesa-dri-drivers
+        -   epel-release
+        -   glibc
+        -   libstdc++
+        -   ImageMagick
+        -   perl
+        -   binutils
+        -   git
+    env:
+        MINC_TOOLKIT: '{{ self.install_path }}'
+        MINC_TOOLKIT_VERSION: '{{ self.install_path }}'
+        PATH: '{{ self.install_path }}/bin:{{ self.install_path }}/volgenmodel-nipype/extra-scripts:{{ self.install_path }}/pipeline:$PATH'
+        PERL5LIB: '{{ self.install_path }}/perl:{{ self.install_path }}/pipeline:${PERL5LIB}'
+        LD_LIBRARY_PATH: '{{ self.install_path }}/lib:{{ self.install_path }}/lib/InsightToolkit:${LD_LIBRARY_PATH}'
+        MNI_DATAPATH: '{{ self.install_path }}/share'
+        MINC_FORCE_V2: '1'
+        MINC_COMPRESS: '4'
+        VOLUME_CACHE_THRESHOLD: '-1'
+        MANPATH: '{{ self.install_path }}/man:${MANPATH}'
+    instructions: |
+        {{ self.install_dependencies() }}
+        echo "Downloading MINC, BEASTLIB, and MODELS..."
+        cd /
+        # ar allows to extract the debian package so we can also install this in centos based OSs.
+        curl {{ self.urls[self.version] }} -o minc.deb && ar p minc.deb data.tar.gz | tar zx && rm minc.deb
+        ln -s /opt/minc/{{ self.version }} {{ self.install_path }}
+        git clone https://github.com/CAIsr/volgenmodel-nipype.git {{ self.install_path }}/volgenmodel-nipype/
+        curl -fL http://packages.bic.mni.mcgill.ca/tgz/beast-library-1.1.tar.gz \
+        | tar -xz -C {{ self.install_path }}/share
+        curl -fL -o /tmp/mni_90a.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09a_minc2.zip
+        unzip /tmp/mni_90a.zip -d {{ self.install_path }}/share/icbm152_model_09a
+        curl -fL -o /tmp/mni_90c.zip http://www.bic.mni.mcgill.ca/~vfonov/icbm/2009/mni_icbm152_nlin_sym_09c_minc2.zip
+        unzip /tmp/mni_90c.zip -d {{ self.install_path }}/share/icbm152_model_09c
+        rm -rf /tmp/mni*
