--- a/neurodocker/templates/mrtrix3.yaml
+++ b/neurodocker/templates/mrtrix3.yaml
@@ -1,81 +1,82 @@
+---
 # Instructions to install MRtrix3.
 
 name: mrtrix3
 url: https://www.mrtrix.org/
 binaries:
-  arguments:
-    required:
-    - version
-    optional:
-      install_path: /opt/mrtrix3-{{ self.version }}
-      build_processes: "1"
-  dependencies:
-    apt:
-    - bzip2
-    - ca-certificates
-    - curl
-    - libpng16-16
-    - libtiff5
-    yum:
-    - bzip2
-    - curl
-    - fftw3
-    - libpng
-    - libtiff
-  urls:
-    "3.0.4": https://github.com/MRtrix3/mrtrix3/releases/download/3.0.4/conda-linux-mrtrix3-3.0.4-h2bc3f7f_0.tar.bz2
-    "3.0.3": https://github.com/MRtrix3/mrtrix3/releases/download/3.0.3/conda-linux-mrtrix3-3.0.3-h2bc3f7f_0.tar.bz2
-    "3.0.2": https://github.com/MRtrix3/mrtrix3/releases/download/3.0.2/conda-linux-mrtrix3-3.0.2-h6bb024c_0.tar.bz2
-    "3.0.1": https://github.com/MRtrix3/mrtrix3/releases/download/3.0.1/conda-linux-mrtrix3-3.0.1-h6bb024c_0.tar.bz2
-    "3.0.0": https://github.com/MRtrix3/mrtrix3/releases/download/3.0.0/conda-linux-mrtrix3-3.0.0-h6bb024c_0.tar.bz2
-  env:
-    PATH: "{{ self.install_path }}/bin:$PATH"
-    LD_LIBRARY_PATH: "{{ self.install_path }}/lib:$PATH"
-  instructions: |
-    {{ self.install_dependencies() }}
-    echo "Downloading MRtrix3 ..."
-    mkdir -p {{ self.install_path }}
-    curl -fsSL {{ self.urls[self.version] }} \
-    | tar -xj -C {{ self.install_path }}
+    arguments:
+        required:
+        -   version
+        optional:
+            install_path: /opt/mrtrix3-{{ self.version }}
+            build_processes: '1'
+    dependencies:
+        apt:
+        -   bzip2
+        -   ca-certificates
+        -   curl
+        -   libpng16-16
+        -   libtiff5
+        yum:
+        -   bzip2
+        -   curl
+        -   fftw3
+        -   libpng
+        -   libtiff
+    urls:
+        3.0.4: https://github.com/MRtrix3/mrtrix3/releases/download/3.0.4/conda-linux-mrtrix3-3.0.4-h2bc3f7f_0.tar.bz2
+        3.0.3: https://github.com/MRtrix3/mrtrix3/releases/download/3.0.3/conda-linux-mrtrix3-3.0.3-h2bc3f7f_0.tar.bz2
+        3.0.2: https://github.com/MRtrix3/mrtrix3/releases/download/3.0.2/conda-linux-mrtrix3-3.0.2-h6bb024c_0.tar.bz2
+        3.0.1: https://github.com/MRtrix3/mrtrix3/releases/download/3.0.1/conda-linux-mrtrix3-3.0.1-h6bb024c_0.tar.bz2
+        3.0.0: https://github.com/MRtrix3/mrtrix3/releases/download/3.0.0/conda-linux-mrtrix3-3.0.0-h6bb024c_0.tar.bz2
+    env:
+        PATH: '{{ self.install_path }}/bin:$PATH'
+        LD_LIBRARY_PATH: '{{ self.install_path }}/lib:$PATH'
+    instructions: |
+        {{ self.install_dependencies() }}
+        echo "Downloading MRtrix3 ..."
+        mkdir -p {{ self.install_path }}
+        curl -fsSL {{ self.urls[self.version] }} \
+        | tar -xj -C {{ self.install_path }}
 
 source:
-  arguments:
-    required:
-    - version
-    optional:
-      repo: https://github.com/MRtrix3/mrtrix3.git
-      install_path: /opt/mrtrix3-{{ self.version }}
-      build_processes: "1"
-  dependencies:
-    apt:
-    - ca-certificates
-    - g++
-    - gcc
-    - git
-    - libeigen3-dev
-    - make
-    - python3
-    - python3-numpy
-    - zlib1g-dev
-    yum:
-    - eigen3-devel
-    - gcc-c++
-    - git
-    - make
-    - numpy
-    - python3
-    - zlib-devel
-  env:
-    PATH: "{{ self.install_path }}/bin:$PATH"
-    LD_LIBRARY_PATH: "{{ self.install_path }}/lib:$PATH"
-  instructions: |
-    {{ self.install_dependencies() }}
-    mkdir -p {{ self.install_path }}
-    git clone {{ self.repo }} {{ self.install_path }}
-    cd {{ self.install_path }}
-    {% if self.version != "master" and self.version != "latest" -%}
-    git checkout {{ self.version }}
-    {% endif -%}
-    python3 configure -nogui
-    echo "Compiling MRtrix3 ..."
-    NUMBER_OF_PROCESSORS="{{ self.build_processes }}" python3 build
+    arguments:
+        required:
+        -   version
+        optional:
+            repo: https://github.com/MRtrix3/mrtrix3.git
+            install_path: /opt/mrtrix3-{{ self.version }}
+            build_processes: '1'
+    dependencies:
+        apt:
+        -   ca-certificates
+        -   g++
+        -   gcc
+        -   git
+        -   libeigen3-dev
+        -   make
+        -   python3
+        -   python3-numpy
+        -   zlib1g-dev
+        yum:
+        -   eigen3-devel
+        -   gcc-c++
+        -   git
+        -   make
+        -   numpy
+        -   python3
+        -   zlib-devel
+    env:
+        PATH: '{{ self.install_path }}/bin:$PATH'
+        LD_LIBRARY_PATH: '{{ self.install_path }}/lib:$PATH'
+    instructions: |
+        {{ self.install_dependencies() }}
+        mkdir -p {{ self.install_path }}
+        git clone {{ self.repo }} {{ self.install_path }}
+        cd {{ self.install_path }}
+        {% if self.version != "master" and self.version != "latest" -%}
+        git checkout {{ self.version }}
+        {% endif -%}
+        python3 configure -nogui
+        echo "Compiling MRtrix3 ..."
+        NUMBER_OF_PROCESSORS="{{ self.build_processes }}" python3 build
