--- a/neurodocker/templates/ndfreeze.yaml
+++ b/neurodocker/templates/ndfreeze.yaml
@@ -1,3 +1,4 @@
+---
 # Instructions to run `nd_freeze` in NeuroDebian images.
 
 name: ndfreeze
@@ -5,15 +6,15 @@ url: https://neuro.debian.net/pkgs/neurodebian-freeze.html
 # not actually source, but we have a choice between binaries and source. Using binaries
 # requires the urls property.
 source:
-  arguments:
-    required:
-    - date
-    optional:
-      opts: ""
+    arguments:
+        required:
+        -   date
+        optional:
+            opts: ''
   # No dependencies because we explicitly install in the instructions.
-  instructions: |
-    apt-get update -qq
-    apt-get install -y -q --no-install-recommends neurodebian-freeze
-    nd_freeze {{ self.opts }} {{ self.date }}
-    apt-get clean
-    rm -rf /var/lib/apt/lists/*
+    instructions: |
+        apt-get update -qq
+        apt-get install -y -q --no-install-recommends neurodebian-freeze
+        nd_freeze {{ self.opts }} {{ self.date }}
+        apt-get clean
+        rm -rf /var/lib/apt/lists/*
